# cli_template

./: .#cish_main.c.1.21  .#nat.c.1.2  .#options.h.1.13  .gitignore  Makefile  Makefile.am  Makefile.builder  README.md  acl.c  acl.h  autogen.sh  cgi-main.c  cish_config.c  cish_config.h  cish_main.c  cish_main.h  cish_tacplus.c  cish_tacplus.h  command_exit.c  command_route.c  commands.h  commands_aaa.c  commands_acl.c  commands_acl.h  commands_bridge.c  commands_chdlc.c  commands_crypto.c  commands_feature.c  commands_fr.c  commands_icmptools.c  commands_ip.c  commands_ipx.c  commands_mangle.c  commands_nat.c  commands_ntp.c  commands_ppp.c  commands_rmon.c  commands_show.c  commands_show.c.mod  commands_sppp.c  (+28 more)
src/: Makefile.am  cgi-main.h  cish_config.c  cish_config.h  cish_main.c  cish_main.h  cish_tacplus.c  commands.h  commandtree.c  commandtree.h  config_aaa.c  config_acl.c  config_apmanager.c  config_banner.c  config_bridge.c  config_crypto.c  config_debug.c  config_enable.c  config_icmptools.c  config_interface.c  config_ip.c  config_ipv6.c  config_mangle.c  config_nat.c  config_ntp.c  config_policymap.c  config_policyroute.c  config_ppp.c  config_rmon.c  config_route.c  config_router.c  config_show.c  config_snmp.c  config_switch.c  config_tcpdump.c  config_telnet.c  config_terminal.c  config_vlan.c  config_vrrp.c  configterm.c  (+16 more)
src/cmds/: Makefile.am  aaa.c  acl.c  bridge.c  commands_ppp.c  configure.c  crypto.c  debug.c  interface.c  ip.c  ipv6.c  keychain.c  mangle.c  mangle.h  mark.c  nat.c  nat.h  ntp.c  policy.c  rmon.c  root.c  route.c  router.c  show.c  snmp.c  switch.c  telnet.c  vrrp.c
src/util/: Makefile  systtyd.h
util/: Makefile  Makefile.am  backupd.c  backupd.h  bwmon.c  bwmon.h  cishinit.c  ifstat.c  rfc1356.c  switch_test.c  systty_logrotate.c  systty_logrotate.h  systtyd.c
