SUBDIRS = \
	cmds

bin_PROGRAMS = \
	cish

cish_SOURCES = \
	cish_main.c \
	cish_tacplus.c \
	match.c \
	pprintf.c \
	terminal_echo.c \
	config_nat.c \
	config_ntp.c \
	config_debug.c \
	config_mangle.c \
	config_exit.c \
	config_ip.c \
	config_show.c \
	config_interface.c \
	config_switch.c \
	config_bridge.c \
	config_snmp.c \
	config_vlan.c \
	config_ppp.c \
	config_telnet.c \
	config_rmon.c \
	config_policymap.c \
	config_router.c \
	config_terminal.c \
	config_crypto.c \
	config_icmptools.c \
	config_route.c \
	config_tcpdump.c \
	config_aaa.c \
	config_acl.c \
	config_enable.c \
	config_vrrp.c


cish_LDADD = \
	$(top_builddir)/src/cmds/libcmds.la
